--- a/package.json
+++ b/package.json
@@ -7,12 +7,26 @@
     "dev": "nuxt dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
-    "postinstall": "nuxt prepare"
+    "postinstall": "nuxt prepare",
+    "lint": "eslint . --ext .js,.ts,.vue",
+    "lint-fix": "eslint . --ext .js,.ts,.vue --fix"
   },
   "devDependencies": {
     "@nuxt/devtools": "latest",
+    "@nuxtjs/eslint-config-typescript": "^12.1.0",
+    "eslint": "^8.54.0",
     "nuxt": "^3.8.2",
+    "sass": "^1.69.5",
+    "typescript": "^5.3.2",
     "vue": "^3.3.8",
     "vue-router": "^4.2.5"
+  },
+  "dependencies": {
+    "@vueuse/core": "^10.6.1",
+    "bootstrap": "^5.3.2",
+    "eslint-plugin-vue": "^9.18.1",
+    "floating-vue": "^2.0.0-beta.20",
+    "swiper": "^11.0.5",
+    "vue-toastification": "^2.0.0-rc.5"
   }
 }
