--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "vue-router": "^4.2.5"
   },
   "dependencies": {
+    "@vueform/multiselect": "^2.6.6",
     "@vueuse/core": "^10.6.1",
     "bootstrap": "^5.3.2",
     "eslint-plugin-vue": "^9.18.1",
