--- a/package.json
+++ b/package.json
@@ -14,7 +14,11 @@
   "devDependencies": {
     "@nuxt/devtools": "latest",
     "@nuxtjs/eslint-config-typescript": "^12.1.0",
+    "@typescript-eslint/eslint-plugin": "^7.7.1",
     "eslint": "^8.57.0",
+    "eslint-import-resolver-typescript": "^3.6.1",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-promise": "^6.1.1",
     "nuxt": "^3.11.2",
     "sass": "^1.75.0",
     "typescript": "^5.4.5",
