--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "eslint-plugin-vue": "^9.25.0",
     "floating-vue": "^2.0.0-beta.20",
     "swiper": "^11.1.1",
-    "vue-toastification": "^2.0.0-rc.5"
+    "vue-toastification": "^2.0.0-rc.5",
+    "@heroicons/vue": "^2.1.3"
   }
 }
